--- a/frontend/styling/App.css
+++ b/frontend/styling/App.css
@@ -1,4 +1,31 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#id {
+  width: 100%;
+  height: 100vh;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+}
+
 .header {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  background-color: skyblue;
+}
+
+.content {
+  height: 70vh;
+}
+
+.footer {
+  background-color: skyblue;
+  height: 300px;
 }
