--- a/frontend/styling/App.css
+++ b/frontend/styling/App.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Quicksand', sans-serif;
 }
 
 #id {
@@ -8,12 +9,8 @@ body {
   height: 100vh;
 }
 
-.home {
-  display: flex;
-  flex-direction: column;
-  align-items: space-around;
-}
-
+/*-------------------------------------------------*/
+/*NAVBAR*/
 .header {
   display: flex;
   flex-direction: row;
@@ -25,7 +22,74 @@ body {
   height: 70vh;
 }
 
+/*-------------------------------------------------*/
+/*FOOTER*/
 .footer {
   background-color: skyblue;
   height: 300px;
 }
+
+/*-------------------------------------------------*/
+/*HOME*/
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: space-around;
+}
+
+/*-------------------------------------------------*/
+/*CONFIRMATION*/
+.confirmation-main-div{
+  margin-left: 200px;
+  margin-top: 20px;
+  margin-right: 200px;
+  padding-bottom: 20px;
+  width: 775px;
+  border-radius: 10px;
+  border: 5px solid mistyrose;
+  text-align: center;
+}
+
+.title-div{
+  font-size: 50px;
+  text-align: center;
+}
+
+.opentable-div{
+  background-color: #ffcdc7;
+  margin-left: 190px;
+  /*padding-left: 50px;*/
+  padding-top: 3px;
+  padding-bottom: 25px;
+  border-radius: 10px;
+  width: 400px;
+  box-shadow: 5px 5px 5px #888888;
+}
+
+.info-title{
+  font-size: 25px;
+  text-weight: bold;
+}
+
+.confirmation-button{
+  font-size: 17px;
+  text-align: center;
+  border-radius:40px;
+  outline:none;
+  letter-spacing:1px;
+  text-shadow:0;
+  background: #fff;
+  cursor: pointer;
+  border: 2px solid black;
+}
+
+.p-tag{
+  font-size: 20px;
+}
+
+.confirmation-button:hover{
+  background: black;
+  font-color: white;
+}
+
+
