--- a/frontend/styling/App.css
+++ b/frontend/styling/App.css
@@ -33,6 +33,7 @@ img {
   width: 250px;
   padding: 5px;
   padding-bottom: -1.5px;
+  border-radius: 15px;
 }
 
 .images {
@@ -40,13 +41,14 @@ img {
   width: 100%;
   margin-top: 100px;
   flex-wrap: wrap;
-  margin-left: 50px;
+  margin-left: 110px;
   margin-top: -50px;
 }
 
 span {
+  position: absolute;
   margin-left: -200px;
-  margin-bottom: 950px;
+  padding-bottom: -450px;
   color: red;
   z-index: 99;
 }
