--- a/frontend/styling/App.css
+++ b/frontend/styling/App.css
@@ -61,6 +61,10 @@ body {
   margin-left: 340px;
 }
 
+.copyright2{
+  margin-left: 260px;
+}
+
 
 /*-------------------------------------------------*/
 /*HOME*/
